filter course learn and updated readme

--- a/DjangoClass/my_site/my_app/templates/my_app/variables.html
+++ b/DjangoClass/my_site/my_app/templates/my_app/variables.html
@@ -9,11 +9,11 @@
 
     <h1>Welcome again!</h1>
 
-    <p>{{ first_name }}</p>
-    <p>{{ last_name }}</p>
-    
+    <p>{{ first_name | upper}}</p>
+    <p>{{ last_name}}</p>
+
     <p>{{ some_list.0 }} </p>
     <p>{{ some_dict.insidekey }}</p>
-    
+    <p>{# This is comment #}</p>
 </body>
 </html>
