django if elif else practice and readme updated

--- a/DjangoClass/my_site/my_app/templates/my_app/variables.html
+++ b/DjangoClass/my_site/my_app/templates/my_app/variables.html
@@ -27,5 +27,15 @@
             <li>{{value | capfirst}}</li>
         {% endfor %}
     </div>
+
+    <br>
+    <ul>
+        {% for i in some_list %}
+            {% if i == 4 %}
+                <p>{{count | add:"1" }} </p>
+            {% endif%}
+        {% endfor %}
+    </ul>
+    
 </body>
 </html>
