Learned tags and url purpose and readme updated

--- a/DjangoClass/my_site/my_app/templates/my_app/example.html
+++ b/DjangoClass/my_site/my_app/templates/my_app/example.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, eum? Ad est repellat velit tempore impedit, adipisci doloremque? Alias recusandae minus eos maiores delectus corrupti animi vel quos consequatur blanditiis.</h1>
+    <br>
 
+    <a href="{% url 'my_app:variables' %}"> Go back</a>
     
 </body>
 </html>
