--- a/DjangoClass/my_site/my_app/templates/my_app/variables.html
+++ b/DjangoClass/my_site/my_app/templates/my_app/variables.html
@@ -36,6 +36,9 @@
             {% endif%}
         {% endfor %}
     </ul>
+
+    <br>
+    <h1><a href="{% url 'my_app:example'  %}">Click me</a></h1>
     
 </body>
 </html>
