--- a/DjangoClass/my_site/my_app/templates/my_app/example.html
+++ b/DjangoClass/my_site/my_app/templates/my_app/example.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dj2</title>
-</head>
-<body>
-    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, eum? Ad est repellat velit tempore impedit, adipisci doloremque? Alias recusandae minus eos maiores delectus corrupti animi vel quos consequatur blanditiis.</h1>
-    <br>
+{% extends 'base.html' %}
 
-    <a href="{% url 'my_app:variables' %}"> Go back</a>
-    
-</body>
-</html>
+
+{% block  content %}
+    <p>Welcome again</p>
+    <a href="{% url 'my_app:variables' %}"> Click me</a>
+
+{% endblock  %}
