--- a/DjangoClass/my_site/my_app/templates/my_app/example.html
+++ b/DjangoClass/my_site/my_app/templates/my_app/example.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block  content %}
     <p>Welcome again</p>
-    <a href="{% url 'my_app:variables' %}"> Click me</a>
-
+    <a href="{% url 'my_app:variables' %}"> Go back</a>
+    <img src ="{% static 'my_app/IMG_6019.jpeg' %}" alt='no image found'> 
 {% endblock  %}
