success revecive the infomation from HTML and updated readme

--- a/DjangoClass/my_car_site/cars/templates/cars/list.html
+++ b/DjangoClass/my_car_site/cars/templates/cars/list.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>hello3</h1>
+    <h1>list html</h1>
+    <div class="container">
+        <ul>
+            {% for i in all_car %}
+            <li>{{ i.brand }} {{ i.year }}</li>
+
+            {% endfor %}
+        </ul>
+
+    </div>
 {% endblock %}
