--- a/DjangoClass/my_car_site/cars/templates/cars/add.html
+++ b/DjangoClass/my_car_site/cars/templates/cars/add.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>wwww</p>
-    <h1>2222</h1>
+    <div class="form-group">
+        <p>Car info enter</p>
+        <form action="" method="POST">
+            {% csrf_token %}
+            <div>
+                <label for="Brand">Brand:</label>
+                <input class="form-control" type='text' id='brand' name='brand'>
+
+            </div>
+            <div>
+                <label for="Year">year:</label>
+                <input class="form-control" type='text' id='year' name='year'>
+
+            </div>
+            <input class="btn btn-primary" type="submit">
+        </form>
+        
+    </div>
 {% endblock %}
