--- a/DjangoClass/my_computer_site/computers/templates/computers/computerinfo.html
+++ b/DjangoClass/my_computer_site/computers/templates/computers/computerinfo.html
@@ -15,7 +15,7 @@
     <body>
         <form action='' method ='POST'>
             {% csrf_token %}
-            {{ form }}
+            {{ form.as_p }}
             <input type='submit'> 
         </form>
 
