--- a/DjangoClass/my_computer_site/computers/templates/computers/computerinfo.html
+++ b/DjangoClass/my_computer_site/computers/templates/computers/computerinfo.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <form action='' method ='POST'>
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type='submit'> 
-        </form>
+{% extends 'base.html' %}
+{% load static %}
 
-        
-    </body>
-</html>
+{% block content %}
+<link rel='stylesheet' href="{% static 'computers/custom.css'%}">
 
+<div class='container'> 
+    <form action='' method='POST' >
+        {% csrf_token %}
+
+        {{ form.as_p }}
+        <input type='submit' > 
+
+    <form/>
+</div> 
+
+{% endblock %}
